created lib and corrected Presto config.properties entries for 0.121 version