@@ -9,6 +9,8 @@ mv presto-server-$PRESTO_VERSION /usr/local
 
 mv /usr/local/presto-server-$PRESTO_VERSION /usr/local/presto
 
+cp ../lib/*.* /usr/local/presto/bin
+
 cp /root/Downloads/presto-cli-$PRESTO_VERSION-executable.jar /usr/local/presto/bin
 
 mv /usr/local/presto/bin/presto-cli-$PRESTO_VERSION-executable.jar /usr/local/presto/bin/presto-cli
@@ -28,9 +30,10 @@ echo "node.data-dir=/var/presto/data" >> /usr/local/presto/etc/node.properties
 echo "# The following provides a good starting point for creating etc/jvm.config:" >> /usr/local/presto/etc/jvm.config
 echo "-server" >> /usr/local/presto/etc/jvm.config
 echo "-Xmx16G" >> /usr/local/presto/etc/jvm.config
-echo "-XX:+UseConcMarkSweepGC" >> /usr/local/presto/etc/jvm.config
+echo "-XX:+UseG1GC" >> /usr/local/presto/etc/jvm.config
+echo "-XX:G1HeapRegionSize=32M" >> /usr/local/presto/etc/jvm.config
+echo "-XX:+UseGCOverheadLimit" >> /usr/local/presto/etc/jvm.config
 echo "-XX:+ExplicitGCInvokesConcurrent" >> /usr/local/presto/etc/jvm.config
-echo "-XX:+AggressiveOpts" >> /usr/local/presto/etc/jvm.config
 echo "-XX:+HeapDumpOnOutOfMemoryError" >> /usr/local/presto/etc/jvm.config
 echo "-XX:OnOutOfMemoryError=kill -9 %p" >> /usr/local/presto/etc/jvm.config
 
@@ -38,7 +41,8 @@ echo "# if you are setting up a single machine for testing that will function as
 echo "coordinator=true" >> /usr/local/presto/etc/config.properties
 echo "node-scheduler.include-coordinator=true" >> /usr/local/presto/etc/config.properties
 echo "http-server.http.port=8084" >> /usr/local/presto/etc/config.properties
-echo "task.max-memory=1GB" >> /usr/local/presto/etc/config.properties
+echo "query.max-memory=5GB" >> /usr/local/presto/etc/config.properties
+echo "query.max-memory-per-node=1GB" >> /usr/local/presto/etc/config.properties
 echo "discovery-server.enabled=true" >> /usr/local/presto/etc/config.properties
 echo "discovery.uri=http://localhost:8084" >> /usr/local/presto/etc/config.properties
 
